src/web/CareLeavers.Web/AssetSrc/scss/application.scss
// Import govuk
@import "../../node_modules/govuk-frontend/dist/govuk/index";

// Import dfe
@import '../../node_modules/dfe-frontend/packages/dfefrontend';


// Override font
@import url('https://rsms.me/inter/inter.css');
$govuk-font-family: 'Inter', sans-serif; // Override govuk font
* {
  font-family: $govuk-font-family !important; // Override all fonts to match
}
.govuk-phase-banner__content
{
  width: 100%;
}

.translate {
  display: block;
  text-align: right;
  min-width: 90px;
  float: right;
  font-size: 1em;
}

.translate a.govuk-link {
  background-image: url("/assets/icon-translate.png");
  background-repeat: no-repeat;
  background-size: contain;
  padding-left: 32px;
}

.environment-banner {
  padding-top: 5px;
  padding-bottom: 5px;
  border-bottom: 1px solid #0b0c0c;
  background-color: orange
}

.environment-banner>div {
  margin: 0 auto;
  max-width: 1200px
}

.dfe-page-grey {
  @include govuk-responsive-padding(6, "top");
  @include govuk-responsive-padding(9, "bottom");
  background-color: #EAF5FF;
}

#main-content-footer.dfe-page-grey {
  @include govuk-responsive-padding(6, "bottom");
}

.dfe-page-grey .govuk-body-l {
  margin: 0;
}

.govuk-breadcrumbs {
  margin-top: 0;
  @include govuk-responsive-margin(9, "bottom");
  
}

.full-width-image {
  max-width: 100%;
}

.split-panel {
  width: 100%;
  display: flex;
  margin: 0 auto;
  background-color: #f3f2f1;
}

.split-panel--bg-white {
  background-color: #fff;
}

.split-panel .govuk-grid-column-one-half.image-column {
  padding: 0;
  position: relative;
}

.split-panel .govuk-grid-column-one-half.text-column {
  padding: 50px;
}

.split-panel .image-container {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  min-height: 300px;
}

.split-panel .govuk-grid-column-one-half {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 20px;
}




@media (max-width: 768px) {
  .split-panel {
    flex-direction: column;
  }
  .split-panel .govuk-grid-column-one-half {
    width: 100%;
  }
  .split-panel .image-container {
    height: 200px;
  }
}

.x-govuk-related-navigation {
  @include govuk-text-colour;
  border-top: 2px solid $govuk-brand-colour;
}

.x-govuk-related-navigation__main-heading {
  @include govuk-font(19, $weight: bold);
  margin-bottom: govuk-spacing(2);
  margin-top: govuk-spacing(3);
}

.x-govuk-related-navigation__sub-heading {
  @include govuk-font(16);
  margin: 0;
  padding-top: govuk-spacing(3);
}

.x-govuk-related-navigation__sub-heading--footer {
  @include govuk-font(19, $weight: bold);
  border-top: 0;
  margin-bottom: govuk-spacing(2);
  margin-top: govuk-spacing(3);
  padding-top: 0;
}

.x-govuk-related-navigation__main-heading + .x-govuk-related-navigation__sub-heading {
  border-top: 0;
  padding-top: 0;
}

.x-govuk-related-navigation__nav-section {
  border-top: 1px solid govuk-colour("mid-grey");
  margin-bottom: govuk-spacing(6);

  &:first-child {
    border-top: none;
  }
}

.x-govuk-related-navigation__link-list {
  list-style: none;
  margin: 0;
  margin-bottom: 1.25em;
  padding: 0;
}

.x-govuk-related-navigation__link {
  @include govuk-font($size: 16, $weight: regular, $line-height: 1.45);
  list-style-type: none;
  margin-top: govuk-spacing(3);

  @include govuk-media-query($from: tablet) {
    line-height: 1.28;
  }
}

.x-govuk-related-navigation__section-link {
  font-weight: bold;
}

.x-govuk-related-navigation__section-link--other {
  font-weight: normal;
}

.dfe-box {
  margin-bottom: 15px;
  margin-right: 15px;
  padding: 15px;
}

.box-dfe {
  border: 1px solid #b1b4b6;
}

section.dfe {
  margin-bottom: 15px;
  margin-top: 60px;
}

.box-gov {
  border: 1px solid #b1b4b6;
}

.box-ext {
  background-color: #EAF5FF;
  border-radius: 15px;
  padding: 25px;
  display: block;
}

.box-guide {
  background-color: #EAF5FF;
}

.box-content {
  width: 75%;
  display: block;
}

.box-dfe .box-content {
  width: 100%;
}

@media (max-width: 768px) {
  .box-content {
    width: 100%;
  }
}
.box-content span {
  color: #505a5f;
}

.box-icon {
  width: 15%;
  display: block;
  right: 0;
  top: 0;
  float: right;
}

.box-icon img {
  max-width: 100%;
}

@media (max-width: 768px) {
  .box-icon {
    display: none;
  }
}

.app-emergency-callout {
  border-left-color: #d4351c;
}

.split-panel .image-container {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  min-height: 300px;
}


.split-panel--bg-white {
  background-color: #fff;
}

.split-panel .govuk-grid-column-one-half.image-column {
  padding: 0;
  position: relative;
}

.split-panel .govuk-grid-column-one-half.text-column {
  padding: 50px;
}

.split-panel .image-container {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  min-height: 300px;
}

@media (min-width: 40.0625em) {
  .dfe-grid-container {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 30px;
  }
}

html
{
  container-type: inline-size;
}

// Override widths
.govuk-width-container {
  @include govuk-width-container;
  --w: 1200px;
  --m: 1em;
  margin-inline: max(   var(--m),50cqw - var(--w)/2);
}

.banner {
  padding-top: 40px;
  padding-bottom: 30px;
  margin-bottom: 30px;
  margin-inline: min(-1*var(--m),var(--w)/2 - 50cqw);
}

.banner-blue {
  background-color: #EAF5FF;
}

.banner > .banner-content {
  margin-inline: max(   var(--m),50cqw - var(--w)/2);
}

.banner .full-width-image {
  max-height: 300px;
}

.alternating-image-text {
  margin-bottom: 30px;
}

.riddle2-wrapper {
  max-width:100%; width:100%;
  margin: -35px auto 0;
}

.govuk-grid-column-two-thirds > .govuk-grid-row > .box-ext {
  margin: 2.5em 15px;
}

.govuk-phase-banner {
  border-bottom: none;
}

/* Call to Action */

.status-launch {
  display: block;
  width: 99%;
  border: 1px #003a6a solid;
  background-color: #f3f2f1;
  margin: 0;
  padding: 0;
  margin-bottom:30px;
}
/* ... */

